--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.custom-nodes.tb</groupId>
-    <artifactId>rule-engine</artifactId>
+    <artifactId>rule-engine-example</artifactId>
     <version>1.0.0</version>
     <packaging>jar</packaging>
 
